# netflix-verify

./: Cargo.toml  README.md
src/: main.rs
src/args/: app_args.rs  mod.rs
src/client/: mod.rs  netflix_client.rs  netflix_request.rs  network_status.rs  request_region.rs  request_result.rs  unlock_status.rs  verify_result.rs
src/dns/: dns_lookup_host.rs  mod.rs
