[package]
name = "netflix-verify"
version = "1.0.0"
authors = ["vuhe <zhuhe202@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
colored = "2.0"
dns-lookup = "1.0"
reqwest = { version = "0.11", features = ["blocking", "socks"] }
